--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div id="app">
+    <h1>{{ message }}</h1>
+    <img :src="imageUrl" alt="Vue Logo">
+  </div>
 
 
   <!-- vue js cdn -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
